# old-code-snippets

./: README.md
cpp/mysqllib/: database.cpp  database.h
go/: README.md
go/cms-content/: BUILD.bazel  main.go  server.go
go/cms-content/k8s/development/: BUILD.bazel  content-deployment.yaml  content-service.yaml
go/cms-content/proto/: BUILD.bazel  content.pb.go  content.proto
go/cms-upload/: BUILD.bazel  main.go  server.go
go/cms-website/: BUILD.bazel  main.go  server.go
go/cms-website/k8s/development/: BUILD.bazel  website-deployment.yaml  website-service.yaml
go/cms-website/proto/: BUILD.bazel  website.proto
go/mailer/: BUILD.bazel  main.go  server.go
go/mailer/k8s/development/: BUILD.bazel  mailer-deployment.yaml  mailer-service.yaml
go/mailer/k8s/staging/: BUILD.bazel  mailer-deployment.yaml  mailer-service.yaml
go/mailer/proto/: BUILD.bazel  mailer.proto
php-js/: README.md
php-js/backend-game-test/: ._classes  ._config.php  ._src  ._views  config.php  game.sql  index.php
php-js/backend-game-test/classes/: ._app  ._lib
php-js/backend-game-test/classes/app/: ._log.app.class.php  ._obj  combat.app.class.php  combatevent.app.class.php  log.app.class.php
php-js/backend-game-test/classes/lib/: ._db.lib.class.php  ._json.lib.class.php  db.lib.class.php  json.lib.class.php
php-js/backend-game-test/src/: ._bootstrap
php-js/backend-game-test/src/bootstrap/: ._css  ._fonts  ._js
php-js/backend-game-test/views/: ._home.php  home.php
php-js/futuro-cms-modules/blog/action/: addon.action.class.php  author.action.class.php  category.action.class.php  edit.action.class.php  info.action.class.php  list.action.class.php
php-js/futuro-cms-modules/blog/api/: blogload.api.class.php  info.api.class.php
php-js/futuro-cms-modules/blog/css/: author.css  edit.css
php-js/futuro-cms-modules/blog/js/: author.js  category.js  edit.js  info.js  list.js
php-js/futuro-cms-modules/blog/lib/: bloglink.lib.class.php  blogpending.lib.class.php
php-js/futuro-cms-modules/blog/templates/: addon.tpl  author.tpl  category.tpl  edit_blog.tpl  fftc_comments.tpl  info.tpl  list.tpl
php-js/futuro-cms-modules/header/action/: edit.action.class.php
php-js/futuro-cms-modules/header/api/: headerload.api.class.php
php-js/futuro-cms-modules/header/templeates/: edit.tpl
php-js/futuro-cms-modules/surveys/action/: edit.action.class.php  list.action.class.php
php-js/futuro-cms-modules/surveys/api/: apisurveyload.api.class.php
php-js/futuro-cms-modules/surveys/css/: edit.css
php-js/futuro-cms-modules/surveys/js/: edit.js  list.js
php-js/futuro-cms-modules/surveys/templeates/: add.tpl  edit.tpl  list.tpl
php-js/futuro-collab/: ajax.php  config.php  index.php
php-js/futuro-collab/app/includes/: access-details-show.php  help.php  htmlfooter.php  htmlheader.php  subtask.php  topheader.php  toptabs.php
php-js/futuro-collab/bk/: .htaccess  config.php  futuro_poskok.sql
php-js/futuro-collab/bk/lib/: controllerbase.lib.class.php  db.lib.class.php  file.lib.class.php  form.lib.class.php  session.lib.class.php  string.lib.class.php  systemnews.lib.class.php  template.lib.class.php
php-js/futuro-collab/bk/model/: client.model.class.php  completesearch.model.class.php  project.model.class.php  task.model.class.php  userdata.model.class.php
php-js/futuro-collab/inc/lang/: js_en.php  js_hr.php  static_en.php  static_hr.php  success-error-en.php  success-error-hr.php
php-js/futuro-collab/lib/: basemodel.lib.class.php  controllerbase.lib.class.php  datetime.lib.class.php  db.lib.class.php  router.lib.class.php  template.lib.class.php  user.lib.class.php
php-js/futuro-collab/model/: client.model.class.php  general.model.class.php  project.model.class.php  task.model.class.php  userdata.model.class.php
php-js/futuro-collab/src/css/: bootstrap.css  datepickr.css  jquery-ui-1.10.0.custom.css  style.css
php-js/futuro-collab/src/js/: bootstrap-datepicker.js  poskok.form.js  poskok.framework.js  poskok.hashtag.js  poskok.load.js  poskok.pagination.js  poskok.popup.js  poskok.prompt.js
php-js/pixplorer/: .htaccess  dynamic_src.php  error_log  index.php
php-js/pixplorer-admin/: config.php  error_log  index.php  login.php  logout.php
php-js/pixplorer-admin/content/: admin_log.php  overview.php  photo_administration.php  site_preferences.php  user_administration.php
php-js/pixplorer-admin/includes/: Logs.php
php-js/pixplorer-admin/models/: Picture.php  User.php
php-js/pixplorer-admin/src/: masonry.js  masonry_load.js  scripts_gallery.js  style.css
php-js/pixplorer-admin/tools/: hasher.php
php-js/pixplorer-admin/widgets/: editor.php  error_log  header.php  login_form.php  menu.php
php-js/pixplorer/application/: AjaxController.php  BaseController.php  Config.php  DB.php  Registry.php  Router.php  Template.php
php-js/pixplorer/includes/: auth.php  css_settings.php  dbconfig.php  fbconfig.php  functions.php  template_strings_en.php
php-js/pixplorer/model/: Categories.php  ImageCropper.php  JSMin.php  Notifications.php  PhotoFavorites.php  Picture.php  Search.php  Security.php  Updater.php  User.php  ViewedUser.php  WorldDatabase.php
php-js/pixplorer/src/scripts/: dyn_select.php  masonry.php  masonry_load.php  masonry_load2.php  nav_fade.php  nav_fade2.php  popup_viewer.php  upload_form_validation.php
php-js/pixplorer/src/styles/: dimensions.php
php-js/pixplorer/views/widget-data/: navigation.php  navigation2.php
php-js/pixplorer/views/widgets/: albums_home.php  albums_profile.php  close_page_viewer.php  close_popup_viewer.php  explore_results_by_city.php  explore_results_bycat.php  explore_results_bysubcat.php  explore_results_parent_bycat.php  explore_results_parent_bysubcat.php  fb_init.php  html_footer.php  html_head.php  item_dark_box.php  masonry_box.php  naked_masonry_box.php  navigation.php  navigation_album.php  navigation_profile.php  navigation_search.php  notifications.php  options_default.php  options_home.php  options_view.php  (+11 more)
python/dataset/: sources.json
python/dataset/imports/: manager.py
python/string-generator/: main.py
(+203 files in other folders)
