load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "github.com/IDBMobileTechnology/idb-mobile/domain/web/cms/content",
    visibility = ["//visibility:private"],
    deps = [
        "//common/lib/go/grpc:go_default_library",
        "//common/lib/go/logger:go_default_library",
        "//common/lib/go/tracer:go_default_library",
        "//domain/web/cms/content/proto:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@in_gopkg_doug_martin_goqu_v4//:go_default_library",
        "@in_gopkg_doug_martin_goqu_v4//adapters/mysql:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapgrpc:go_default_library",
    ],
)

go_binary(
    name = "content",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "content_image",
    binary = ":content",
    visibility = ["//visibility:public"],
)
