load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "github.com/IDBMobileTechnology/idb-mobile/domain/web/cms/upload",
    visibility = ["//visibility:private"],
    deps = [
        "//common/lib/go/logger:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@in_gopkg_doug_martin_goqu_v4//:go_default_library",
        "@in_gopkg_doug_martin_goqu_v4//adapters/mysql:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "upload",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
