load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

filegroup(
    name = "proto_files",
    srcs = ["mailer.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "mailer_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/IDBMobileTechnology/idb-mobile/common/services/mailer/proto",
    proto = ":mailer_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":mailer_go_proto"],
    importpath = "github.com/IDBMobileTechnology/idb-mobile/common/services/mailer/proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "proto_proto",
    srcs = ["mailer.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "mailer_proto",
    srcs = ["mailer.proto"],
    visibility = ["//visibility:public"],
)
