load("@k8s_local_object//:defaults.bzl", "k8s_local_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_local_object(
    name = "content_deployment",
    template = ":content-deployment.yaml",
)

k8s_local_object(
    name = "content_service",
    template = ":content-service.yaml",
)

k8s_objects(
    name = "development",
    objects = [
        ":content_deployment",
        ":content_service",
    ],
)
