load("@k8s_local_object//:defaults.bzl", "k8s_local_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_local_object(
    name = "website_deployment",
    template = ":website-deployment.yaml",
)

k8s_local_object(
    name = "website_service",
    template = ":website-service.yaml",
)

k8s_objects(
    name = "development",
    objects = [
        ":website_deployment",
        ":website_service",
    ],
)
