load("@k8s_local_object//:defaults.bzl", "k8s_local_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_local_object(
    name = "mailer_deployment",
    template = ":mailer-deployment.yaml",
)

k8s_local_object(
    name = "mailer_service",
    template = ":mailer-service.yaml",
)

k8s_objects(
    name = "development",
    objects = [
        ":mailer_deployment",
        ":mailer_service",
    ],
)
