load("@k8s_object//:defaults.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_object(
    name = "mailer_deployment",
    template = ":mailer-deployment.yaml",
)

k8s_object(
    name = "mailer_service",
    template = ":mailer-service.yaml",
)

k8s_objects(
    name = "staging",
    objects = [
        ":mailer_deployment",
        ":mailer_service",
    ],
    visibility = ["//visibility:public"],
)
